--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,7 +46,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/email"
-            android:layout_width="340dp"
+            android:layout_width="match_parent"
             android:textColor="@color/white"
             android:maxLines="1"
             android:layout_height="match_parent"
@@ -80,7 +80,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/password"
-            android:layout_width="340dp"
+            android:layout_width="match_parent"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
             android:layout_height="match_parent"
