--- a/app/src/main/res/layout/listviewfavorites.xml
+++ b/app/src/main/res/layout/listviewfavorites.xml
@@ -52,13 +52,13 @@
 
         <LinearLayout
             android:layout_marginLeft="60dp"
-            android:layout_width="280dp"
+            android:layout_width="230dp"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/CategoryNameListView"
-                android:layout_width="280dp"
+                android:layout_width="match_parent"
                 android:maxLines="4"
                 android:layout_height="0dp"
                 android:layout_marginTop="1dp"
@@ -67,7 +67,7 @@
                 android:text="Ramen"
                 android:textColor="@color/white"
                 android:textColorHint="@color/black"
-                android:textSize="18sp" />
+                android:textSize="16sp" />
 
         </LinearLayout>
 
